[metadata]
name = pplogger
description = PP's Logger Module
long_description = file: README.rst
license = GPLv3
author = Peter Pakos
author-email = peter.pakos@wandisco.com
url = https://github.com/peterpakos/pplogger
keywords = log logging logger
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Logging

[options]
include_package_data = True
packages = pplogger

[bdist_wheel]
universal = 1

[aliases]
package = clean --all egg_info bdist_wheel sdist
release = package upload
testrelease = package upload -r testpypi